# ebu-tt-live-toolkit

./: .travis.yml  Dockerfile  Jenkinsfile  Pipfile  README.md  main.yaml  package-lock.json  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  configurator.rst  conversion_from_ebutt.rst  denesting.rst  ebu_tt_live.bindings.rst  ebu_tt_live.node.rst  index.rst  scripts_and_their_functions.rst  source_code_reference.rst  validation_framework.rst
docs/source/api/: ebu_tt_live.bindings.raw.rst  ebu_tt_live.bindings.rst  ebu_tt_live.clocks.rst  ebu_tt_live.configspec.rst  ebu_tt_live.documents.rst  ebu_tt_live.example_data.rst  ebu_tt_live.node.rst  ebu_tt_live.rst  ebu_tt_live.scripts.rst  ebu_tt_live.twisted.rst
ebu_tt_live/: errors.py  project.py  strings.py  utils.py
ebu_tt_live/adapters/: document_data.py
ebu_tt_live/bindings/: __init__.py  _ebuttdt.py
ebu_tt_live/bindings/converters/: ebutt1_ebutt3.py  ebutt3_ebuttd.py
ebu_tt_live/bindings/raw/: __init__.py  _ebuttdt.py  _ebuttlm.py  _ebuttm.py  _ebuttp.py  _ebutts.py  _ittp.py  _itts.py  _ttm.py  _ttp.py  _tts.py
ebu_tt_live/bindings/test/: test_d_region_overlap.py  test_validation_timing.py
ebu_tt_live/bindings/validation/: presentation.py  (+1 more)
ebu_tt_live/carriage/: websocket.py
ebu_tt_live/config/: carriage.py  node.py
ebu_tt_live/documents/: __init__.py  converters.py  ebutt1.py  ebutt3.py  ebuttd.py
ebu_tt_live/node/: __init__.py  delay.py  denester.py  ebutt1_ebutt3_producer.py  encoder.py
ebu_tt_live/scripts/: ebu_dummy_encoder.py  validator.py
ebu_tt_live/xsd/: ebutt_d.xsd  ebutt_live.xsd
testing/bdd/: conftest.py  test_ebutt1_conversion.py  test_ebutt1_parsing.py  test_ebuttd_multiple_active_regions_overlapping.py  test_ebuttd_nested_elements.py  test_ebuttd_resolved_timings_on_elements.py  test_ebuttd_style_references.py  test_elements_active_times.py
(+36 files in other folders)
